[package]
name = "utp-tokio"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
authors = ["Robert Zabel"]
description = "libutp bindings for tokio"
keywords = ["utp", "tokio"]

[dependencies]
libutp-sys = "0.1.4"
os_socketaddr = "0.2.5"
tokio = { version = "1.38.1", default-features = false, features = ["net","sync","time","rt","macros"] }
